<resources>
    <string name="app_name">Empowering The Nation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Empowering The Nation</string>
    <string name="nav_header_subtitle">empoweringTheNation@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Month Courses</string>
    <string name="menu_slideshow">Week Courses</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_payment">Payments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_scrolling">Home</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <style name="choose_location">CHOOSE LOCATION</style>

    <string-array name="string_locations">
        <item>Choose location</item>
        <item>Joburg</item>
        <item>Southdale</item>
        <item>Cape Town</item>
    </string-array>

    <string name="title_activity_contact_us2">Contact US</string>
    <string name="childInfo">FEES: R750 \n\nPURPOSE: To provide basic child and baby care\n\n CONTENT:\n \n• birth to six-month old baby needs \n\n• seven-month to one year old needs \n\n• Toddler needs \n\n• Educational toys</string>
    <string name="gardenInfo">FEES: R750 \n\nPURPOSE: To provide basic knowledge of watering, pruning and planting in a domestic garden\n\n CONTENT:\n \n• Water restrictions and the watering requirements of indigenous and exotic plants \n\n• Pruning and propagation of plants \n\n• Planting techniques for different plant types </string>
    <string name="cookingInfo">FEES: R750 \n\nPURPOSE:  To prepare and cook nutritious family meals\n\n CONTENT:\n \n• Nutritional requirements for a healthy body \n\n• Types of protein, carbohydrates and vegetables\n\n• Planning meals\n\n• Preparation and cooking of meals </string>
    <string name="firstAidInfo">FEES: 1500 \n\nPURPOSE:  To provide first aid awareness and basic life support\n\n CONTENT:\n \• Wounds and bleeding \n\n• Burns and fractures\n\n• Emergency scene management\n\n• Cardio-Pulmonary Resuscitation (CPR)\n\n• Respiratory distress e.g., Choking, blocked airway</string>
    <string name="sewingInfo">FEES: 1500 \n\nPURPOSE:  : To provide alterations and new garment tailoring services\n\n CONTENT:\n \n• Types of stitches\n\n• Threading a sewing machine\n\n• Sewing buttons, zips, hems and seams\n\n• Alterations\n\n• Designing and sewing new garments</string>
    <string name="landscapingInfo">FEES: 1500 \n\nPURPOSE:To provide landscaping services for new and established gardens\n\n CONTENT:\n \n• Indigenous and exotic plants and trees \n\n• Fixed structures (fountains, statues, benches, tables, built-in braai)\n\n• Balancing of plants and trees in a garden\n\n• Aesthetics of plant shapes and colours\n\n• Garden layout</string>
    <string name="lifeSkillsInfo">FEES: 1500 \n\nPURPOSE:   To provide skills to navigate basic life necessities\n\n CONTENT:\n \n• Opening a bank account \n\• Basic labour law (know your rights)\n\n• Basic reading and writing literacy \n\n• Basic numeric literacy</string>

    <string name="months_course">Six-Month courses</string>
    <string name="week_courses">Six-Week courses</string>
    <string name="courses_available">Courses available:</string>
</resources>