<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_homePart2"
            android:icon="@drawable/home_page"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_monthCourses"
            android:icon="@drawable/course1"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_weekCourses"
            android:icon="@drawable/course"
            android:title="@string/menu_slideshow" />
        <item

            android:id="@+id/nav_contactUs"
            android:icon="@drawable/contact"
            android:title="@string/menu_contact"/>
        <item
            android:id="@+id/nav_paymentPage"
            android:icon="@drawable/paymoney"
            android:title="@string/menu_payment"/>

    </group>
</menu>

